# SMT-libLog-CPP

./: .gitignore  CMakeLists.txt  README.md
doc/: Timestamp.md  log.md  log_code.md
src/: Timestamp.cpp
tests/: CMakeLists.txt
